@@ -42,6 +42,7 @@ namespace OpenRCT2::Scripting
         MAP_CHANGE,
         MAP_CHANGED,
         MAP_SAVE,
+        PARK_CALCULATE_GUEST_CAP,
         COUNT,
         UNDEFINED = -1,
     };
